test/Serialization/hermetic-seal-import.code
// RUN: %empty-directory(%t)
// RUN:     %target-language-frontend %s -D MOD1 -experimental-hermetic-seal-at-link -emit-module -o %t/Mod1.codemodule
// RUN: not %target-language-frontend %s -D MOD2                                     -emit-module -o %t/Mod2.codemodule -I %t 2>&1 | %FileCheck %s
// RUN:     %target-language-frontend %s -D MOD2 -experimental-hermetic-seal-at-link -emit-module -o %t/Mod2.codemodule -I %t

// CHECK: {{.*}} error: module 'Mod1' was built with -experimental-hermetic-seal-at-link, but current compilation does not have -experimental-hermetic-seal-at-link

#if MOD1
    public fn foo() {}
#endif

#if MOD2
    import Mod1
    public fn bar() {}
#endif
